[package]
name = "wasmtime-wasi-rdma"
version.workspace = true
authors.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-rdma = "0.5.0"
portpicker = "0.1.1"
rdma-sys = "0.3.0"
tokio = "1.25.0"
wiggle = { workspace = true }
