[package]
name = "rdma_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cap-std = "1.0.7"
sys = "0.0.0"
# tokio = "1.26.0"
wasi-rdma = { path = "../wasi-rdma", version = "0.1.0"}

#[dependencies.tokio]
#version = "1.15"
#features = ["full"]

[workspace]
